@@ -52,6 +52,7 @@ Unreleased Version 2.2.2-pre
  * Fix: Work around a crash on Windows when toggling kinetic scroll settings.
  * Fix: Properly show current layout on first layouts dialog run. Thanks Dib for reporting.
  * Fix: Disable image reader limit in command-line tools under Qt6.
+ * Fix: Deduplicate brush and tag names when exporting brushes. Thanks Blozzom for reporting.
 
 2025-02-12 Version 2.2.2-beta.5
  * Feature: Color circle dock with gamut masks, available through View > Docks > Color Circle. Similar to Krita's Artistic Color Selector and MyPaint's HSV/HCY Wheel.
